# Atiny

./: Cargo.toml  README.md  Spec.md
.github/workflows/: test.yml
crates/atiny-checker/: Cargo.toml
crates/atiny-checker/src/: context.rs  exhaustive.rs  lib.rs  program.rs  top_level.rs  types.rs  unify.rs  util.rs
crates/atiny-checker/src/check/: expr.rs  mod.rs
crates/atiny-checker/src/infer/: expr.rs  mod.rs  module.rs  pat.rs  top_level.rs  typ.rs
crates/atiny-cli/: Cargo.toml
crates/atiny-cli/src/: main.rs
crates/atiny-error/: Cargo.toml
crates/atiny-error/src/: lib.rs
crates/atiny-fs/: Cargo.toml
crates/atiny-fs/src/: lib.rs
crates/atiny-ir/: Cargo.toml
crates/atiny-ir/src/: lib.rs
crates/atiny-location/: Cargo.toml
crates/atiny-location/src/: lib.rs
crates/atiny-lowering/: Cargo.toml
crates/atiny-lowering/src/: lib.rs  visitors.rs  walkable.rs
crates/atiny-misc/: Cargo.toml
crates/atiny-misc/src/: lib.rs
crates/atiny-parser/: Cargo.toml
crates/atiny-parser/src/: error.rs  io.rs  lib.rs  parser.lalrpop
crates/atiny-tests/: Cargo.toml
crates/atiny-tests/src/: lib.rs
crates/atiny-tests/suite/: argument_pattern.at  bodyless.at  bodyless.expect  closure_move.at  closure_move.expect  expr_precedence.at  expr_precedence.expect  importsLib.at  importsMain.at  let_pat.at  let_pat.expect  list_mismatch.at  list_mismatch.expect  named_wildcard.at  non_exaustive.at  non_exaustive.expect  record.at  useless_clause.at  useless_clause.expect  wildcard.at
crates/atiny-tests/suite/expr/: cyclic.at  cyclic.expect  double_bound.at  double_bound.expect  infix.at  let_chain.at  let_chain.expect  match_shadow.at  match_shadow.expect  simple.at  simple.expect
crates/atiny-tests/suite/parsing/: syntax.at  syntax.expect
crates/atiny-tests/tests/: suite.rs
crates/atiny-tree/: Cargo.toml
crates/atiny-tree/src/: abstract.rs  elaborated.rs  lib.rs
examples/: exhaustiveness.at  infix.at  lib.at  main.at  record.at
src/: check.rs  error.rs  lib.rs  location.rs  main.rs  parser.lalrpop  syntax.rs  util.rs
src/check/: context.rs  mod.rs  types.rs  util.rs
src/syntax/: tree.rs
