[package]
name = "atiny"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.19.12", features = ["lexer"]}
im-rc = "*"
itertools = "0.10.5"

[build-dependencies]
lalrpop = {version = "0.19.12", features = ["lexer"]}
