[workspace]
resolver = "2"
members = [
    "crates/atiny-cli",
    "crates/atiny-parser",
    "crates/atiny-checker",
    "crates/atiny-error",
    "crates/atiny-tree",
    "crates/atiny-location",
    "crates/atiny-tests",
    "crates/atiny-misc",
    "crates/atiny-fs",
    "crates/atiny-lowering",
]

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
use_self = "warn"
missing_const_for_fn = "allow"
semicolon_if_nothing_returned = "warn"
