[package]
name = "atiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atiny-location = {path = "../atiny-location" }
atiny-tree = {path = "../atiny-tree" }
atiny-error = {path = "../atiny-error" }
atiny-parser = {path = "../atiny-parser" }
atiny-checker = {path = "../atiny-checker" }
clap = { version = "4.3.10", features = ["derive"] }

[lints]
workspace = true
