[package]
name = "atiny-lowering"
version = "0.1.0"
edition = "2021"

[dependencies]
atiny-location = { path = "../atiny-location" }
atiny-checker = { path = "../atiny-checker" }
atiny-error = { path = "../atiny-error" }
atiny-tree = { path = "../atiny-tree" }
indexmap = "2.0.0"

[lints]
workspace = true
