[package]
name = "atiny-parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.20.0", default-features = false, features = ["lexer", "unicode"]}
itertools = "0.10.5"

atiny-location = {path = "../atiny-location" }
atiny-tree = {path = "../atiny-tree" }
atiny-error = {path = "../atiny-error" }


[build-dependencies]
lalrpop = {version = "0.20.0", default-features = false, features = ["lexer", "unicode"]}
